name:                lisk
version:             0.1.0.0
synopsis:            Lisp-flavoured Haskell
description:         Please see README.md
homepage:            https://github.com/haskell-lisp/lisk
license:             BSD3
license-file:        LICENSE
author:              Duncan McGreggor
maintainer:          oubiwann@gmail.com
copyright:           2013-2016 Duncan McGreggor
category:            Lisp
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , haskell-src-exts
                     , template-haskell
                     , atto-lisp
  default-language:    Haskell2010

executable lisk-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lisk
  default-language:    Haskell2010

test-suite lisk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lisk
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lisk
